# shoplist

./: PROJECT_OVERVIEW.md  TASKS.md
api/: graphql-schema.json  pyproject.toml
api/api/: asgi.py  graphql.py  permissions.py  schema.py  settings.py  urls.py
api/authentication/: admin.py  models.py  pipeline.py  schema.py  serializers.py  views.py
api/authentication/migrations/: 0001_initial.py  0002_user_avatar.py
api/shop/: admin.py  choices.py  consumers.py  models.py  schema.py  urls.py  views.py
api/shop/graphql/: filters.py  mutations.py  nodes.py
api/shop/migrations/: 0001_initial.py  0002_storeproduct_section.py  0003_list_category.py  0004_rename_is_deleted_list_is_hidden.py  0005_listcategory_productcategory_productunit_and_more.py  0006_list_category_listproduct_unit_product_category_and_more.py  0007_auto_20230711_1550.py  0008_alter_listcategory_options_and_more.py  0009_alter_list_products_alter_store_products.py  0010_productcategory_color.py  0011_remove_product_category_product_categories_and_more.py  0012_remove_list_category_remove_list_is_hidden_and_more.py  0013_remove_storeproduct_aisle_storesection_and_more.py  0014_alter_storeproduct_price.py  0015_storesection_description.py  0016_rename_quantity_needed_listproduct_quantity_need.py  0017_alter_product_options.py  0018_productunit_abbreviation.py  0019_remove_listproduct_list_remove_listproduct_product_and_more.py  0020_storesectiontype_remove_storesection_section_type.py  0021_storesection_section_type.py  0022_alter_product_current_stock_and_more.py  0023_product_description.py  (+8 more)
(+82 files in other folders)
